--- a/main.css
+++ b/main.css
@@ -14,7 +14,7 @@
     margin-bottom: 20px;
 }
 
-.input{
+.input {
     position: relative;
     top: 20px;
     right: 20px;
@@ -25,4 +25,17 @@ button {
     width: 70px;
     height: 40px;
     margin-bottom: 5px;
+    font-size: 15px;
+}
+
+#clear {
+    background-color: red;
+    color: white;
+    border-radius: 20%;
+    border: 2px solid white;
+}
+
+#equals {
+    background-color: #4285f4;
+    border: 2px solid white;
 }
